<resources>
    <string name="app_name">FIT &amp; FINE ATTENDANCE</string>
</resources>

